feat: 2025/02/10 Record.vue UI와 RecordingModal.vue UI 작성 중, 파형 그래프 좀 더 UX 친화적으로 최적화 진행 중

--- a/front/package.json
+++ b/front/package.json
@@ -10,7 +10,8 @@
     "start": "npm run dev"
   },
   "dependencies": {
-    "vue": "^3.5.13"
+    "vue": "^3.5.13",
+    "wavesurfer.js": "^7.9.0"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.2.1",
