--- a/backend/vercel.json
+++ b/backend/vercel.json
@@ -11,7 +11,7 @@
       "src": "/api/(.*)",
       "dest": "/server.js",
       "headers": {
-        "Access-Control-Allow-Origin": "https://melolist-1r1ncpl21-gnukes-projects.vercel.app",
+        "Access-Control-Allow-Origin": "https://melolist-xi.vercel.app",
         "Access-Control-Allow-Methods": "GET, POST, PUT, DELETE, OPTIONS",
         "Access-Control-Allow-Headers": "Content-Type, Authorization"
       }
