--- a/backend/vercel.json
+++ b/backend/vercel.json
@@ -10,6 +10,7 @@
     {
       "src": "/api/(.*)",
       "dest": "/server.js",
+      "methods": ["GET", "POST", "PUT", "DELETE", "OPTIONS"],
       "headers": {
         "Access-Control-Allow-Origin": "https://melolist-xi.vercel.app",
         "Access-Control-Allow-Methods": "GET, POST, PUT, DELETE, OPTIONS",
