--- a/backend/package.json
+++ b/backend/package.json
@@ -16,10 +16,10 @@
     "axios": "^1.7.9",
     "cors": "^2.8.5",
     "express": "^4.21.2",
-    "form-data": "^4.0.2"
+    "form-data": "^4.0.2",
+    "dotenv": "^16.4.7"
   },
   "devDependencies": {
-    "dotenv": "^16.3.1",
     "nodemon": "^3.1.9"
   }
 }
