--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
     "start": "npm run dev"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^6.7.2",
     "vue": "^3.5.13",
     "wavesurfer.js": "^7.9.0"
   },
